# Samoyed

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
connectors/: protocol.py
extensions/examples/: custom_enum_stub.py
firing-range/: README.md  docker-compose.yml
samoyed/: __init__.py  session_naming.py  sessions.py
samoyed/api/: auth.py  main.py  middleware.py  search_suggestions.py
samoyed/attack/: __init__.py  analyzer.py  capability_bindings.py  cross_cloud_resolve.py  high_value.py  host_pivot.py  irsa_trust.py  k8s_pivot.py  mitre.py  outcomes.py  patterns.py  (+7 more)
tests/: conftest.py  test_api_ui.py  test_attack_graph.py  test_attack_outcomes.py  test_auth.py  test_aws_network_collector.py  test_blast_resources.py  test_capability_bindings.py  test_cartography_connector.py  test_cartography_network.py  test_change_impact.py  test_client_iam_report.py  test_client_iam_report_role_chain.py  test_collect_and_boundary.py  test_connectors_import.py  test_cred_blast.py  test_credential_reuse.py  test_credentials.py  test_cross_cloud_resolve.py  test_ecs.py  test_edge_dedupe.py  test_enrichment_apply.py  test_enrichment_aws_goat.py  test_enrichment_edges.py  test_enrichment_import.py  test_enrichment_inventory.py  test_enrichment_library.py  test_enum_depth.py  test_executes_as_and_host.py  test_firing_range.py  test_firing_range_clutter.py  test_firing_range_collect.py  test_fixture_azure.py  test_fixture_enterprise.py  test_fixtures.py  test_fuzzy_resolve.py  test_gcp_azure.py  test_gcp_enum_edges.py  test_graph_compare.py  test_graph_native_ids.py  (+41 more)
(+202 files in other folders)
